infra/k8s/deploy.yaml
#@ load("@ytt:data", "data")
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: #@ data.values.name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: #@ data.values.name
  template:
    metadata:
      labels:
        app: #@ data.values.name
    spec:
      serviceAccountName: cloud-storage-access
      containers:
      - name: #@ data.values.name
        image: #@ "europe-west3-docker.pkg.dev/healthy-saga-329513/sltech-briq/" + data.values.image_name + ":" + data.values.image_tag
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: #@ data.values.resources.cpu
            memory: #@ data.values.resources.memory 
        #@ #command: ["gunicorn"]
        #@ #args: ["starknet_proxy.proxy_fapi:app", "-k", "uvicorn.workers.UvicornWorker", "-b", "0.0.0.0:5000"]
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 2
